# saver

./: .env.example  .gitignore  NewAge_Innovators_AI_Saver_Agent_GrabHack2.pptx  Procfile  README.md  create_ppt.py  make_vr_img.py  pyproject.toml  requirements.txt
saver/: __init__.py  __main__.py  cli.py  models.py
saver/agents/: llm_config.py  prompts.py  supervisor.py  tool_registry.py
saver/data/: db.py  seed.py
saver/guardrails/: input_guard.py  output_guard.py
saver/tools/: actionable.py  forecast.py  goals.py  grab_earnings.py  transactions.py
saver/web/: app.py  i18n.py
saver/web/templates/: base.html  chat.html  dashboard.html  goals.html  login.html  onboarding.html
tests/: test_agent_integration.py  test_guardrails.py  test_tools.py
